deployments/stable/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: xxx-xxx-stable
  labels:
    name: xxx-xxx-stable
...
