deployments/stable/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: xxx-xxx-stable
  name: xxx-xxx
  labels:
    app: xxx-xxx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xxx-xxx
  template:
    metadata:
      labels:
        app: xxx-xxx
    spec:
      containers:
        - name: xxx-xxx
          image: harbor.xxx.com/xxx-xxx/xxx-xxx:stable # todo change
          imagePullPolicy: Always
          ports:
            - name: main
              containerPort: 8889
          #          lifecycle:
          #            preStop:
          #              exec:
          #                command: ["/bin/sh", "/home/wwwroot/websocket/deployments/grace_terminate.sh"]
          resources:
            requests:
              memory: "1024Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          volumeMounts: #在当前容器内进行数据卷为config-volume的挂载
            - name: config-volume
              mountPath: /etc/config
            - name: log-dir
              mountPath: /home/log
      volumes:
        - name: config-volume
          configMap: #这个config-volume从名字为xxx-xxx的导入来的
            name: xxx-xxx
        - name: log-dir
          hostPath:
            path: /home/log
      imagePullSecrets:
        - name: regcred
