deployments/stable/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: xxx-xxx-stable
  name: xxx-xxx
spec:
  selector:
    app: xxx-xxx
  ports:
    - port: 8889
      targetPort: 8889
  sessionAffinity: None
...
