deployments/stable/ingress_rule.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: xxx-xxx-stable
  name: xxx-xxx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: xxx-xxx.xxx-xxx-stable.svc.cluster.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: xxx-xxx
                port:
                  number: 8889
...
